[package]
name = "polyfuse-examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = "0.2"
polyfuse-tokio = "0.1"

anyhow = "1"
futures = "0.3"
libc = "0.2"
tokio = { version = "0.2", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.1"

[[bin]]
name = "emptyfs"
path = "src/emptyfs.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"
